Discord rich presence fully implemented.
Better than BrawlCrate classic:
Infinite RPC bug should be 100% fixed
Program doesn't crash if dll is missing (instead just ignores rich presence based features)
Better optimization

--- a/BrawlCrate/BrawlCrate.csproj
+++ b/BrawlCrate/BrawlCrate.csproj
@@ -347,6 +347,9 @@ Super Smash Bros. Brawl © 2008 Nintendo and HAL Laboratory</Copyright>
     <ProjectReference Include="..\BrawlLib\BrawlLib.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="discord-rpc.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Loaders\Example Loader %28RFNT%29.py">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
