--- a/BrawlCrate/Properties/Settings.settings
+++ b/BrawlCrate/Properties/Settings.settings
@@ -60,7 +60,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="DiscordRPCNameCustom" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">My Mod</Value>
     </Setting>
   </Settings>
 </SettingsFile>
