Fix compilation errors for BrawlLib (why does visual studio break things that should work?)

--- a/BrawlLib/BrawlLib.csproj
+++ b/BrawlLib/BrawlLib.csproj
@@ -82,10 +82,7 @@ BrawlLib Copyright © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie, Sammi
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>if not '$(ConfigurationName)' == 'Debug' (
-  RD /S /Q "$(TargetDir)"
-)
-%windir%\system32\xcopy "$(ProjectDir)InternalDocumentation\*" "$(TargetDir)\InternalDocumentation\" /Y /I /S</PreBuildEvent>
+    <PreBuildEvent>RD /S /Q "$(TargetDir)"</PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PostBuildEvent />
