--- a/BrawlLib/BrawlLib.csproj
+++ b/BrawlLib/BrawlLib.csproj
@@ -94,6 +94,7 @@ BrawlLib Copyright © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie, Sammi
   <ItemGroup>
     <None Remove="CustomLists\FighterList.txt" />
     <None Remove="CustomLists\StageList.txt" />
+    <None Remove="Hardcoded Files\Textures\metal00.tex0" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="OpenTK" Version="3.0.1" />
@@ -109,6 +110,7 @@ BrawlLib Copyright © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie, Sammi
   <ItemGroup>
     <EmbeddedResource Include="CustomLists\FighterList.txt" />
     <EmbeddedResource Include="CustomLists\StageList.txt" />
+    <EmbeddedResource Include="Hardcoded Files\Textures\metal00.tex0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Modeling\Collada\ColladaImportDialog.cs">
