--- a/Updater/Net.csproj
+++ b/Updater/Net.csproj
@@ -109,7 +109,7 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
-  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition=" '$(Configuration)'!='Mono' ">
     <Exec Command="RD /S /Q &quot;$(TargetDir)&quot;" />
   </Target>
 </Project>
