Travis-CI Mac Build added (MacOS should work less than linux but it's nice to have the tests there)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: csharp
 install: nuget restore BrawlCrateNext.sln
 script: msbuild /p:Configuration=Mono BrawlCrateNext.sln
+os:
+  - linux
+  - osx
